--- a/lore.html
+++ b/lore.html
@@ -7,8 +7,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
 <body>
-
     <div class="menu-button">
         <i class="material-icons">menu</i>
     </div>
@@ -16,7 +16,7 @@
     <div class="menuthing">
         <nav class="menu">
             <ul class="list1">
-                <li class="menuList"><a href="/lore.html">Lore</a></li>
+                <li class="menuList"><a href="/index.html">Home</a></li>
                 <li class="menuList"><a href="#">Item 2</a></li>
                 <li class="menuList"><a href="#">Item 3</a></li>
             </ul>
@@ -24,17 +24,12 @@
         <div id="layer"></div>
     </div>
 
-    <div id="containerMain">
-        <div id="imgMain">
-            <h1 id="titleBox">
-                Grilled Cheese&#8482;
-            </h1>
-        </div>
-        <div id="main1">
-            <div class="normalText">"The best snack EVER"</div>
-            <div class="normalText">-Me</div>
-        </div>
+    <div id="loreGrid">
+        <div id="loreHead">head</div>
+        <div id="loreText">text</div>
+        <div id="loreBottom">end</div>
     </div>
+
     <script src="js/main.js"></script>
 </body>
 </html>
