--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="menu">
             <ul class="list1">
                 <li class="menuList"><a href="/lore.html">Lore</a></li>
-                <li class="menuList"><a href="#">Item 2</a></li>
+                <li class="menuList"><a href="/order.html">Order</a></li>
                 <li class="menuList"><a href="#">Item 3</a></li>
             </ul>
         </nav>
