--- a/order.html
+++ b/order.html
@@ -17,18 +17,13 @@
         <nav class="menu">
             <ul class="list1">
                 <li class="menuList"><a href="/index.html">Home</a></li>
-                <li class="menuList"><a href="/lore.html">Lore</a></li>
+                <li class="menuList"><a href="/order.html">Order</a></li>
                 <li class="menuList"><a href="#">Item 3</a></li>
             </ul>
         </nav>
         <div id="layer"></div>
     </div>
 
-    <div id="loreGrid">
-        <div id="loreHead">Lore</div>
-        <div id="loreText"> <div id="loreMain"> The first ever Grilled Cheese was forged by the mighty hands of the mortal man known as "Carti", the Grilled Cheese was perfectly cooked using lava sources from the nearby volcano in Pompeii, and used the most exclusive frying pan made from stygian iron and infused with the souls of the mortals that died along the way. The perfect Grilled Cheese started a beacon of light that amazed everyone in a 1563.87km radius. After that he became known worldwide as "The Grilled Cheese Man" and rose to worldwide power quickly.</div></div>
-        <div id="loreBottom"></div>
-    </div>
 
     <script src="js/main.js"></script>
 </body>
