--- a/order.html
+++ b/order.html
@@ -17,13 +17,33 @@
         <nav class="menu">
             <ul class="list1">
                 <li class="menuList"><a href="/index.html">Home</a></li>
-                <li class="menuList"><a href="/order.html">Order</a></li>
+                <li class="menuList"><a href="/lore.html">Lore</a></li>
                 <li class="menuList"><a href="#">Item 3</a></li>
             </ul>
         </nav>
         <div id="layer"></div>
     </div>
-
+    
+    <div id="orderGrid">
+        <div id="orderMain">
+            <div id="orderText">
+                <div id="titleOrder">Buy Grilled Cheese</div>
+                <div class="nameBox">
+                    <label for="Name">Name: </label>
+                    <input type="text" class="Name" name="Name">
+                </div>
+                <div class="nameBox">
+                    <label for="Name">Adress: </label>
+                    <input type="text" class="Name" name="Name">
+                </div>
+                <div class="nameBox">
+                    <label for="Name">Number Grilled Cheese: </label>
+                    <input type="text" class="cheese" name="Name">
+                </div>
+                <button id="orderButton">Order</button>
+            </div>
+        </div>
+    </div>
 
     <script src="js/main.js"></script>
 </body>
