--- a/gallery.html
+++ b/gallery.html
@@ -7,8 +7,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
 <body>
-
     <div class="menu-button">
         <i class="material-icons">menu</i>
     </div>
@@ -16,25 +16,28 @@
     <div class="menuthing">
         <nav class="menu">
             <ul class="list1">
+                <li class="menuList"><a href="/index.html">Home</a></li>
                 <li class="menuList"><a href="/lore.html">Lore</a></li>
                 <li class="menuList"><a href="/order.html">Order</a></li>
-                <li class="menuList"><a href="/gallery.html">Gallery</a></li>
             </ul>
         </nav>
         <div id="layer"></div>
     </div>
 
-    <div id="containerMain">
-        <div id="imgMain">
-            <h1 id="titleBox">
-                Grilled Cheese&#8482;
-            </h1>
+
+    <div id="rapper">
+        <div id="cabeza">
+            Gallery
         </div>
-        <div id="main1">
-            <div class="normalText">"The best snack EVER"</div>
-            <div class="normalText">-Me</div>
+        <div id="galleryimg">
+            <img src="/img/collagfe.png" alt="" id="bollar">
+        </div>
+        <div id="lapartedeabajo">
+            cheese.
         </div>
     </div>
+    
+
     <script src="js/main.js"></script>
 </body>
 </html>
