--- a/lore.html
+++ b/lore.html
@@ -18,7 +18,7 @@
             <ul class="list1">
                 <li class="menuList"><a href="/index.html">Home</a></li>
                 <li class="menuList"><a href="/order.html">Order</a></li>
-                <li class="menuList"><a href="#">Item 3</a></li>
+                <li class="menuList"><a href="/gallery.html">Gallery</a></li>
             </ul>
         </nav>
         <div id="layer"></div>
