--- a/gallery.html
+++ b/gallery.html
@@ -24,17 +24,25 @@
         <div id="layer"></div>
     </div>
 
+    <div class="menuthing2">
+        <article id="siuu">
+            <h1 class="insidetext">You're not yourself when you're hungry</h1>
+            <h2 class="insidetext">Grilled Cheese</h2>
+            <div id="layer"></div>
+        </article>
+    </div>
+
 
     <div id="rapper">
-        <div id="cabeza">
+        <header id="cabeza">
             Gallery
-        </div>
-        <div id="galleryimg">
+        </header>
+        <main id="galleryimg">
             <img src="/img/collagfe.png" alt="" id="bollar">
-        </div>
-        <div id="lapartedeabajo">
+        </main>
+        <footer id="lapartedeabajo">
             cheese.
-        </div>
+        </footer>
     </div>
     
 
