--- a/index.html
+++ b/index.html
@@ -24,17 +24,37 @@
         <div id="layer"></div>
     </div>
 
-    <div id="containerMain">
-        <div id="imgMain">
+    <div class="menuthing2">
+        <article id="siuu">
+            <h1 class="insidetext">You're not yourself when you're hungry</h1>
+            <h2 class="insidetext">Grilled Cheese</h2>
+            <div id="layer"></div>
+        </article>
+    </div>
+
+    <main id="containerMain">
+        <section id="imgMain">
             <h1 id="titleBox">
                 Grilled Cheese&#8482;
             </h1>
-        </div>
-        <div id="main1">
-            <div class="normalText">"The best snack EVER"</div>
-            <div class="normalText">-Me</div>
-        </div>
-    </div>
+        </section>
+        <section id="main1">
+            <article class="normalText">"The best snack EVER"</article>
+            <section class="normalText">-Me</section>
+        </section>
+        <footer id="igotblackigotwhite">
+            <article id="left">
+                <h1>Contact</h1>
+                <h2>Phone Number: oh hell nah</h2>
+                <h2>mateo.lundqvist@elev.ga.ntig.se</h2>
+            </article>
+            <article id="right">
+                <h1>Grilled Cheese</h1>
+                <h2>Very Nice</h2>
+            </article>
+        </footer>
+    </main>
     <script src="js/main.js"></script>
+
 </body>
 </html>
