--- a/lore.html
+++ b/lore.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
+<body id="lorebody">
     <div class="menu-button">
         <i class="material-icons">menu</i>
     </div>
@@ -24,10 +24,32 @@
         <div id="layer"></div>
     </div>
 
+    <div class="menuthing2">
+        <article id="siuu">
+            <h1 class="insidetext">You're not yourself when you're hungry</h1>
+            <h2 class="insidetext">Grilled Cheese</h2>
+            <div id="layer"></div>
+        </article>
+    </div>
+
     <div id="loreGrid">
-        <div id="loreHead">Lore</div>
-        <div id="loreText"> <div id="loreMain"> The first ever Grilled Cheese was forged by the mighty hands of the mortal man known as "Carti", the Grilled Cheese was perfectly cooked using lava sources from the nearby volcano in Pompeii, and used the most exclusive frying pan made from stygian iron and infused with the souls of the mortals that died along the way. The perfect Grilled Cheese started a beacon of light that amazed everyone in a 1563.87km radius. After that he became known worldwide as "The Grilled Cheese Man" and rose to worldwide power quickly.</div></div>
-        <div id="loreBottom"></div>
+        <header id="loreHead">Lore</header>
+        <main id="loreText">
+            <div id="loreMain">
+                <div id="card" class="delete">
+                    <img id="carti" class="delete" src="img/playboicarti.jpg" alt="Avatar" style="width:100%">
+                        <div id="containerino" class="delete">
+                            <h4 class="delete"><b>Playboi Carti</b></h4>
+                            <p class="delete">Grilled Cheese Creator</p>
+                        </div>
+                    </div> 
+                <h2 id="lorelore">The first ever Grilled Cheese was forged by the mighty hands of the mortal man known as "Carti", the Grilled Cheese was perfectly cooked using lava sources from the nearby volcano in Pompeii, and used the most exclusive frying pan made from stygian iron and infused with the souls of the mortals that died along the way. The perfect Grilled Cheese started a beacon of light that amazed everyone in a 1563.87km radius. After that he became known worldwide as "The Grilled Cheese Man" and rose to worldwide power quickly.</h1> 
+                </div>
+                <div id="bottomText">
+                    <h3 id="bottomtext">"I loved Grilled Cheese man" -Carti</h3>
+                </div>
+            </main>
+        <footer id="loreBottom"></footer>
     </div>
 
     <script src="js/main.js"></script>
