--- a/order.html
+++ b/order.html
@@ -23,25 +23,43 @@
         </nav>
         <div id="layer"></div>
     </div>
+
+    <div class="menuthing2">
+        <article id="siuu">
+            <h1 class="insidetext">You're not yourself when you're hungry</h1>
+            <h2 class="insidetext">Grilled Cheese</h2>
+            <div id="layer"></div>
+        </article>
+    </div>
     
     <div id="orderGrid">
-        <div id="orderMain">
-            <div id="orderText">
-                <div id="titleOrder">Buy Grilled Cheese</div>
-                <div class="nameBox">
+        <section id="imageright">
+
+        </section>
+        <main id="orderMain">
+            <article id="orderText">
+                <h1 id="titleOrder">Buy Grilled Cheese</h1>
+                <section class="nameBox">
                     <label for="Name">Name: </label>
                     <input type="text" class="Name" name="Name">
-                </div>
-                <div class="nameBox">
+                </section>
+                <section class="nameBox">
                     <label for="Name">Adress: </label>
                     <input type="text" class="Name" name="Name">
-                </div>
-                <div class="nameBox">
+                </section>
+                <section class="nameBox">
+                    <label for="Name">Cheese type: </label>
+                    <input type="text" class="Name" name="Name">
+                </section>
+                <section class="nameBox">
                     <label for="Name">Number Grilled Cheese: </label>
                     <input type="text" class="cheese" name="Name">
-                </div>
+                </section>
                 <button id="orderButton">Order</button>
-            </div>
+            </article>
+        </main>
+        <div id="imageleft">
+
         </div>
     </div>
 
