--- a/order.html
+++ b/order.html
@@ -33,9 +33,9 @@
     </div>
     
     <div id="orderGrid">
-        <section id="imageright">
+        <aside id="imageright">
 
-        </section>
+        </aside>
         <main id="orderMain">
             <article id="orderText">
                 <h1 id="titleOrder">Buy Grilled Cheese</h1>
@@ -58,9 +58,9 @@
                 <button id="orderButton">Order</button>
             </article>
         </main>
-        <div id="imageleft">
+        <aside id="imageleft">
 
-        </div>
+        </aside>
     </div>
 
     <script src="js/main.js"></script>
