--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </section>
         <section id="main1">
             <article class="normalText">"The best snack EVER"</article>
-            <section class="normalText">-Me</section>
+            <article class="normalText">-Me</article>
         </section>
         <footer id="igotblackigotwhite">
             <article id="left">
